# OSM_roads_parser_cpp

./: CMakeLists.txt  README.md  build.sh
include/: get_osm.h  osm_parser.h  rapidxml_ext.hpp  render.h  render_stb.h
src/: get_osm.cpp  main.cpp  osm_parser.cpp  render.cpp  render_stb.cpp
